--- a/composer.json
+++ b/composer.json
@@ -1,5 +1,5 @@
 {
-    "name": "facebook/graph-sdk",
+    "name": "szymat/graph-sdk",
     "description": "Facebook SDK for PHP",
     "keywords": ["facebook", "sdk"],
     "type": "library",
@@ -12,7 +12,7 @@
         }
     ],
     "require": {
-        "php": "^5.4|^7.0"
+        "php": "^5.4|^7.0|^8.0"
     },
     "require-dev": {
         "phpunit/phpunit": "~4.0",
